New option: smpi/keep-temps to not cleanup temp files
(fix #160)

--- a/src/smpi/smpirun.in
+++ b/src/smpi/smpirun.in
@@ -206,6 +206,7 @@ while true; do
             ;;
         "-keep-temps")
 	    KEEP="true"
+	    SIMOPTS="$SIMOPTS --cfg=smpi/keep-temps:yes"
             shift 1
             ;;
         "-wrapper")
