--- a/src/smpi/smpicc.in
+++ b/src/smpi/smpicc.in
@@ -18,10 +18,10 @@ CMAKE_LINKARGS="-L@libdir@"
 
 list_set CFLAGS
 list_set LINKARGS
-if [ "@WIN32@" == "1" ]; then
+if [ "x@WIN32@" = "x1" ]; then
     list_add CFLAGS "-include" "@includedir@/smpi/smpi_main.h"
     list_add LINKARGS "@libdir@\libsimgrid.dll"
-elif [ "@APPLE@" == 1 ]; then
+elif [ "x@APPLE@" = "x1" ]; then
     list_add CFLAGS "-fpic"
     list_add LINKARGS "-shared" "-lsimgrid" "-Wl,-undefined,error"
 else
