I like sed, but sed does not like me

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,11 +211,11 @@ if(enable_lua)
   include(FindLuaSimgrid)
 endif()
 
-set(SIMGRID_SIMGRID_HAVE_NS3 0)
+set(SIMGRID_HAVE_NS3 0)
 if(enable_ns3)
   include(FindNS3)
   if (SIMGRID_HAVE_NS3)
-    set(SIMGRID_SIMGRID_HAVE_NS3 1)
+    set(SIMGRID_HAVE_NS3 1)
   else()
     message(FATAL_ERROR "Cannot find NS3. Please install it (apt-get install ns3 libns3-dev) or disable that cmake option")
   endif()
@@ -965,7 +965,7 @@ message("        LDFlags .....................: ${CMAKE_C_LINK_FLAGS}")
 message("        with LTO ....................: ${enable_lto}")
 message("")
 
-if (SIMGRID_SIMGRID_HAVE_NS3)
+if (SIMGRID_HAVE_NS3)
   message("        Compile NS-3 ................: yes (path: ${NS3_PATH})")
 else()
   message("        Compile NS-3 ................: NO  (hint: ${NS3_HINT})")
