reassure sonar: reinterpret_cast are the way to go in this file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.sources=src,examples,include,teshsuite
 
 
 # Disable some rules on some files
-sonar.issue.ignore.multicriteria=j1,jni1,jni2,c1,c2a,c2b,c3,c4a,c4b
+sonar.issue.ignore.multicriteria=j1,jni1,jni2,c1,c2a,c2b,c3,c4a,c4b,f1
 
 # The Object.finalize() method should not be overriden
 # But we need to clean the native memory with JNI
@@ -29,6 +29,7 @@ sonar.issue.ignore.multicriteria.jni1.resourceKey=src/bindings/java/*.cpp
 # But JNI mandates these parameters
 sonar.issue.ignore.multicriteria.jni2.ruleKey=cpp:S1172
 sonar.issue.ignore.multicriteria.jni2.resourceKey=src/bindings/java/*.cpp
+
 
 # Pointers should not be cast to integral types
 # But we need that for jMSG, smpi and other places
@@ -53,6 +54,12 @@ sonar.issue.ignore.multicriteria.c4a.ruleKey=cpp:GlobalNamespaceMembers
 sonar.issue.ignore.multicriteria.c4a.resourceKey=examples/**/*.cpp
 sonar.issue.ignore.multicriteria.c4b.ruleKey=cpp:GlobalNamespaceMembers 
 sonar.issue.ignore.multicriteria.c4b.resourceKey=examples/**/*.hpp
+
+
+# "reinterpret_cast" should not be used
+# But we need this to interface C and Fortran
+sonar.issue.ignore.multicriteria.f1.ruleKey=cpp:S3630
+sonar.issue.ignore.multicriteria.f1.resourceKey=src/smpi/smpi_f77.cpp
 
 
 # Exclude some files from the analysis:
