sonar: disable dupplication in teshsuite too

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -73,7 +73,7 @@ sonar.exclusions=src/*_unit.c*,teshsuite/smpi/mpich3-test/**,teshsuite/smpi/isp/
 
 # Exclude our examples from the duplication detection.
 # Examples are expected to be somehow repetitive
-sonar.cpd.exclusions=examples/**
+sonar.cpd.exclusions=examples/**,teshsuite/**
 
 # The build-wrapper output dir
 sonar.cfamily.build-wrapper-output=bw-outputs
