sonar: dont' complain when we follow the advices of codacy

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.sources=src,examples,include,teshsuite
 
 
 # Disable some rules on some files
-sonar.issue.ignore.multicriteria=j1,jni1,jni2,c1,c2a,c2b,c3,c4a,c4b,f1
+sonar.issue.ignore.multicriteria=j1,jni1,jni2,c1,c2a,c2b,c3,c4a,c4b,c5,f1
 
 # The Object.finalize() method should not be overriden
 # But we need to clean the native memory with JNI
@@ -54,6 +54,11 @@ sonar.issue.ignore.multicriteria.c4a.ruleKey=cpp:GlobalNamespaceMembers
 sonar.issue.ignore.multicriteria.c4a.resourceKey=examples/**/*.cpp
 sonar.issue.ignore.multicriteria.c4b.ruleKey=cpp:GlobalNamespaceMembers 
 sonar.issue.ignore.multicriteria.c4b.resourceKey=examples/**/*.hpp
+
+# Replace alternative operator "not" with "!"
+# I like it better so please leave me alone
+sonar.issue.ignore.multicriteria.c5.ruleKey=cpp:S3659
+sonar.issue.ignore.multicriteria.c5.resourceKey=**/*.cpp
 
 
 # "reinterpret_cast" should not be used
