--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.sources=src,examples,include,teshsuite
 
 
 # Disable some rules on some files
-sonar.issue.ignore.multicriteria=j1,jni1,jni2,c1,c2a,c2b,c3,c4a,c4b,c5,f1
+sonar.issue.ignore.multicriteria=j1,jni1,jni2,c1,c2a,c2b,c3,c4a,c4b,c5a,c5b,f1
 
 # The Object.finalize() method should not be overriden
 # But we need to clean the native memory with JNI
@@ -57,8 +57,10 @@ sonar.issue.ignore.multicriteria.c4b.resourceKey=examples/**/*.hpp
 
 # Replace alternative operator "not" with "!"
 # I like it better so please leave me alone
-sonar.issue.ignore.multicriteria.c5.ruleKey=cpp:S3659
-sonar.issue.ignore.multicriteria.c5.resourceKey=**/*.cpp
+sonar.issue.ignore.multicriteria.c5a.ruleKey=cpp:S3659
+sonar.issue.ignore.multicriteria.c5a.resourceKey=**/*.cpp
+sonar.issue.ignore.multicriteria.c5b.ruleKey=cpp:S3659
+sonar.issue.ignore.multicriteria.c5b.resourceKey=**/*.hpp
 
 
 # "reinterpret_cast" should not be used
